Designidee erfunden, Farben gefunden, Wireframes erstellt, Files für coden vorbereitet

--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Portfolio Project">
     <title>Portfolio</title>
     <link rel="stylesheet" href="./css/nav.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/portfolio.css">
     
 
     <!-- Font Roboto -->
@@ -29,18 +29,6 @@
     />
 </head>
 <body>
-  <header>
-    <nav>
-      <ul>
-        <li><a href="./css/style.css">Home</a></li>
-        <li><a href="./css/portfolio.css">Portfolio</a></li>
-        <li><a href="/css/skills.css">Skills</a></li>
-        <li><a href="./css/contact.css">Contacts</a></li>
-      </ul>
-    </nav>
-
-    .header-container>
-  </header>
     
 </body>
 </html>
