--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Portfolio Project">
     <title>Portfolio</title>
     <link rel="stylesheet" href="./css/nav.css">
-    <link rel="stylesheet" href="./css/works.css">
+    <link rel="stylesheet" href="./css/portfolio.css">
 
     <!-- Font Roboto -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
