Foto bearbeitet, nav erstellt, design in wy<reframes bearbeitet

--- a/portfolio.html
+++ b/portfolio.html
@@ -28,6 +28,16 @@
     />
 </head>
 <body>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="./css/style.css">Home</a></li>
+        <li><a href="./css/portfolio.css">Portfolio</a></li>
+        <li><a href="/css/skills.css">Skills</a></li>
+        <li><a href="./css/contact.css">Contacts</a></li>
+      </ul>
+    </nav>
+  </header>
     
 </body>
 </html>
