Pics added, Wireframe edited, homepage/header created

--- a/index.html
+++ b/index.html
@@ -35,49 +35,50 @@
         <li><a href="#">Home</a></li>
         <li><a href="./portfolio.css">Portfolio</a></li>
         <li><a href="/skills.css">Skills</a></li>
-        <li><a href="./contact.css">Contacts</a></li>
+        <li><a href="./contact.css">Contact</a></li>
       </ul>
     </nav>
     <!-- ------------HEADER CONTAINER ----------------->
     <div class="header-container">
       <!-- HEADER FIRST BLOCK -->
-      <div class="header-box">
+      <div class="header-box-1">
         <div>
           <h1><span>Hello</span> <br> I'm Timur</h1>
           <h2><strong>Web Developer</strong></h2>
         </div>
         <ul>
-          <li><a href="#"></a></li>
-          <li><a href="#"></a></li>
+          <li><a href="https://www.instagram.com/timurbeerleen/?hl=de" target="_blank" rel="noopener noreferrer"></a></li>
+          <li><a href="https://www.linkedin.com/in/timur-kokumbaev-3391b7249/" target="_blank" rel="noopener noreferrer"></a></li>
+          <li><a href="https://github.com/TimurKbv" target="_blank" rel="noopener noreferrer"></a></li>
         </ul>
       </div>
 
       <!-- HEADER SECOND BLOCK -->
-      <div class="header-box">
+      <div class="header-box-2">
 
         <a href="#">
-          <div class="header-menu">
+          <div class="header-menu-1">
             <h3>H<span>o</span>me</h3>
             <p>Some words about me.</p>
           </div>
         </a>
 
         <a href="./portfolio.html">
-          <div class="header-menu">
-            <h3>Por<span>t</span>folio</h3>
+          <div class="header-menu-2">
+            <h3>Port<span>f</span>olio</h3>
             <p>My last works.</p>
           </div>
         </a>        
 
         <a href="./skills.html">
-          <div class="header-menu">
-            <h3>Sk<span>i</span>lls</h3>
+          <div class="header-menu-3">
+            <h3>S<span>k</span>ills</h3>
             <p>Something about my skills.</p>
           </div>
         </a>
 
         <a href="./contact.html">
-          <div class="header-menu">
+          <div class="header-menu-4">
             <h3>Co<span>n</span>tact</h3>
             <p>Send me a message.</p>
           </div>
@@ -91,7 +92,41 @@
   </header>
 
   <main>
+    <section class="section-1">
+      <div class="item-1">
+        <h2>About me</h2>
+        <p></p>
+      </div>
+      <div class="item-2">
+        <div class="image"><img src="./img/me-in-the-mountains.jpg" alt="Pic"></div>
+      </div>
+    </section>
 
+    <section class="section-2">
+      <div class="item-1">
+        <div class="image"><img src="./img/me-boxing.PNG" alt="Pic"></div>
+      </div>
+      <div class="item-2">
+        <p></p>
+      </div>
+    </section>
+
+    <section class="section-3">
+      <div class="item-1">
+        <p></p>
+      </div>
+      <div class="item-2">
+        <div class="image"><img src="./img/me-snowboard.PNG" alt="Pic"></div>
+      </div>
+    </section>
+
+    <section class="section-4">
+      <div class="item-1">
+        <p></p>
+      </div>
+      <div class="item-2"></div>
+    </section>
+    <footer></footer>
   </main>
     
 </body>
