--- a/contact.html
+++ b/contact.html
@@ -8,8 +8,8 @@
     <meta name="description" content="Portfolio Project">
     <title>Portfolio</title>
     <link rel="stylesheet" href="./css/nav.css">
-    <link rel="stylesheet" href="./css/portfolio.css">
-    
+    <link rel="stylesheet" href="./css/contact.css">
+    <link rel="stylesheet" href="./css/footer.css">
 
     <!-- Font Roboto -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -29,16 +29,61 @@
     />
 </head>
 <body>
+  <!-- HEADER -->
   <header>
     <nav>
       <ul>
-        <li><a href="./css/style.css">Home</a></li>
-        <li><a href="./css/portfolio.css">Portfolio</a></li>
-        <li><a href="/css/skills.css">Skills</a></li>
-        <li><a href="./css/contact.css">Contacts</a></li>
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="./portfolio.html">Portfolio</a></li>
+        <li><a href="./skills.html">Skills</a></li>
+        <li><a href="./contact.html">Contacts</a></li>
       </ul>
     </nav>
   </header>
+
+  <!-- MAIN -->
+  <main>
+
+  </main>
+
+  <!-- FOOTER -->
+  <footer>
+    <div class="footer-container">
+      <ul>
+
+        <li>copyright</li>
+
+        <li>
+          <ul class="social-media-links">
+            <li>
+              <a
+                href="https://www.instagram.com/timurbeerleen/?hl=de"
+                target="_blank"
+                rel="noopener noreferrer"
+              ></a>
+            </li>
+            <li>
+              <a
+                href="https://www.linkedin.com/in/timur-kokumbaev-3391b7249/"
+                target="_blank"
+                rel="noopener noreferrer"
+              ></a>
+            </li>
+            <li>
+              <a
+                href="https://github.com/TimurKbv"
+                target="_blank"
+                rel="noopener noreferrer"
+              ></a>
+            </li>
+          </ul>
+        </li>
+
+        <li>all rights reserved</li>
+
+      </ul>
+    </div>
+</footer>
     
 </body>
 </html>
