Home-page responsive gemacht

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
         <!-- HEADER SECOND BLOCK -->
         <div class="header-box-2">
-          <a href="#">
+          <a href="#main">
             <div class="header-menu-1">
               <h3>H<span>o</span>me</h3>
               <p>Some words about me.</p>
@@ -110,7 +110,7 @@
       </div>
     </header>
           <!-- --------------MAIN----------------- -->
-    <main>
+    <main id="main">
       <!-- SECTION 1 -->
       <section class="section-1">
         <div class="item-1">
@@ -171,11 +171,11 @@
         </div>
         <div class="item-2">
           <div class="image">
-            <img src="./img/me-boxing.PNG" alt="Boxing Pic" />
+            <img src="./img/nav-pic-8.jpg" alt="Boxing Pic" />
           </div>
         </div>
         <div class="image">
-          <img src="./img/me-snowboard.PNG" alt="Snowboard Pic" />
+          <img src="./img/nav-pic-2.jpg" alt="Snowboard Pic" />
         </div>
       </section>
       <!-- Section 4 -->
