Portfolio Page Titel & Grid-Container created

--- a/portfolio.html
+++ b/portfolio.html
@@ -38,6 +38,29 @@
         <li><a href="./contact.html">Contacts</a></li>
       </ul>
     </nav>
+
+    <div class="header-container">
+      <div class="titel-container">
+        <h1>Portfolio</h1>
+        <h2>Last works</h2>
+      </div>
+  
+      <div class="header-grid-container">
+        <div class="header-grid-item">
+          <h3>Backstage Talks</h3>
+          <p>View</p>
+        </div>
+        <div class="header-grid-item">
+          <h3>Basic/Dept</h3>
+          <p>View</p>
+        </div>
+        <div class="header-grid-item">
+          <h3>Hardcode Team Homepage</h3>
+          <p>View</p>
+        </div>
+      </div>
+    </div>
+    
   </header>
 
   <main>
