Contact-Page created & maked responsive, Portfolio-Page header created with grid

--- a/contact.html
+++ b/contact.html
@@ -43,6 +43,53 @@
 
   <!-- MAIN -->
   <main>
+    <!-- ----------Contact Form----------- -->
+    <div class="container">
+
+      <div class="contact">
+        <h1>Co<span>n</span>tact</h1>
+        <p>Stay Positive Street 1 <br> 55555 Chalet <br>Mountains</p>
+      </div>
+
+      <ul>
+        <li>
+          <a
+            href="https://www.instagram.com/timurbeerleen/?hl=de"
+            target="_blank"
+            rel="noopener noreferrer"
+          ></a>
+        </li>
+        <li>
+          <a
+            href="https://www.linkedin.com/in/timur-kokumbaev-3391b7249/"
+            target="_blank"
+            rel="noopener noreferrer"
+          ></a>
+        </li>
+        <li>
+          <a
+            href="https://github.com/TimurKbv"
+            target="_blank"
+            rel="noopener noreferrer"
+          ></a>
+        </li>
+      </ul>
+
+      <form>
+        <fieldset>
+          <input type="text" placeholder="First name">
+          <input type="text" placeholder="Last name">
+        </fieldset>
+        <input type="email" name="mail" placeholder="Email address">
+        <textarea name="Text" cols="30" rows="7" placeholder="Write me a message"></textarea>
+        <button>Send</button>
+      </form>
+
+    </div>
+
+    <div class="pic-container">
+        
+    </div>
 
   </main>
 
