--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
               <div><span>Portfolio</span></div>
             </a>
             <p>
-              Check my first works out
+              Check my <span>first works</span> out
             </p>
             
           </div>
