--- a/skills.html
+++ b/skills.html
@@ -41,7 +41,27 @@
   </header>
 
   <main>
+    <h1>Skills</h1>
 
+    <div class="grid-skills-container">
+      <div class="grid-item"><h2>Full Stack Web Developer</h2></div>
+      <div class="grid-item"></div>
+      <div class="grid-item"></div>
+      <div class="grid-item"></div>
+      <div class="grid-item"></div>
+      <div class="grid-item"><h3>Other Skills</h3></div>
+      <div class="grid-item"><h3>Programming Languages</h3></div>
+      <div class="grid-item"><h3>Other Languages</h3></div>
+      <div class="grid-item"><h3>Frameworks</h3></div>
+      <div class="grid-item"><h4>Bo<span>o</span>tstr<span>a</span>p</h4></div>
+      <div class="grid-item"><h4><span>J</span>ava<span>S</span>cript</h4></div>
+      <div class="grid-item"><h4><span>H</span>TML / <span>C</span>SS</h4></div>
+      <div class="grid-item"><h4>G<span>i</span>t</h4></div>
+      <div class="grid-item"><h4>S<span>A</span>SS / S<span>C</span>SS</h4></div>
+      <div class="grid-item"><h4>R<span>e</span>act</h4></div>
+      <div class="grid-item"><h4>Fi<span>g</span>ma</h4></div>
+      <div class="bg-item"></div>
+    </div>
   </main>
     
   <!-- FOOTER -->
