--- a/assets/backstage-talks/index.html
+++ b/assets/backstage-talks/index.html
@@ -123,6 +123,6 @@
         <a href="#"><strong>Privacy Policy</strong></a>
     </footer>
 
-    <script src="./js/script.js"></script>
+    <!-- <script src="./js/script.js"></script> -->
 </body>
 </html>
