Improved portfolio projects, removed redundant comments

--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,9 @@
     />
 </head>
 <body>
+  <!-- -------HEADER---------- -->
   <header>
+    <!-- NAV -->
     <nav>
       <ul>
         <li><a href="./index.html">Home</a></li>
@@ -38,13 +40,13 @@
         <li><a href="./contact.html">Contacts</a></li>
       </ul>
     </nav>
-
+    <!-- TITEL -->
     <div class="header-container">
       <div class="titel-container">
         <h1>Portfolio</h1>
         <h2>Last works</h2>
       </div>
-  
+      <!-- ---------GRID-CONTAINER---------------------- -->
       <div class="header-grid-container">
 
         <a href="#project-1" class="header-grid-item">
@@ -109,7 +111,7 @@
   </header>
   <!-- ----------MAIN------------------- -->
   <main>
-
+    <!-- ========= PROJECT - 1 ============== -->
     <section id="project-1">
       <div class="project-content">
         <h2>Ba<span>s</span>ic</h2>
@@ -126,7 +128,7 @@
       
 
     </section>
-
+    <!-- ========= PROJECT - 2 ============== -->
     <section id="project-2">
 
       <div class="project-iframe">
@@ -143,7 +145,7 @@
       </div>
 
     </section>
-
+    <!-- ========= PROJECT - 3 ============== -->
     <section id="project-3">
       <div class="project-content">
         <h2>Ha<span>r</span>dcode</h2>
@@ -160,7 +162,7 @@
       </div>
 
     </section>
-
+    <!-- ========= PROJECT - 4 ============== -->
     <section id="project-4">
 
       <div class="project-iframe">
@@ -177,7 +179,7 @@
       </div>
 
     </section>
-
+    <!-- ========= PROJECT - 5 ============== -->
     <section id="project-5">
       <div class="project-content">
         <h2></h2>
@@ -193,7 +195,7 @@
       </div>
 
     </section>
-
+    <!-- ========= PROJECT - 6 ============== -->
     <section id="project-6">
  
       <div class="project-iframe">
@@ -214,7 +216,7 @@
 
   </main>
 
-  <!-- FOOTER -->
+  <!-- ------------------FOOTER ---------------------->
   <footer>
     <div class="footer-container">
       <ul>
