--- a/skills.html
+++ b/skills.html
@@ -29,7 +29,9 @@
     />
 </head>
 <body>
+  <!-- --------------HEADER--------------------- -->
   <header>
+    <!-- NAV -->
     <nav>
       <ul>
         <li><a href="./index.html">Home</a></li>
@@ -42,7 +44,7 @@
 
   <main>
     <h1>Skills</h1>
-
+    <!-- ================GRID-CONTAINER============== -->
     <div class="grid-skills-container">
       <div class="grid-item"><h2>Full Stack Web Developer</h2></div>
       <div class="grid-item"></div>
@@ -64,7 +66,7 @@
     </div>
   </main>
     
-  <!-- FOOTER -->
+  <!-- -----------------FOOTER------------------- -->
   <footer>
     <div class="footer-container">
       <ul>
