--- a/skills.html
+++ b/skills.html
@@ -84,6 +84,11 @@
       <div class="bg-item"></div>
     </div>
   </main>
+
+  <section>
+
+    
+  </section>
     
   <!-- -----------------FOOTER------------------- -->
   <footer>
