HTML document cleaned

--- a/skills.html
+++ b/skills.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Timur Kokumbaev">
-    <meta name="description" content="Portfolio Project">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Timur Kokumbaev" />
+    <meta name="description" content="Portfolio Project" />
     <title>Portfolio</title>
-    <link rel="stylesheet" href="css/nav.css">
-    <link rel="stylesheet" href="css/skills.css">
-    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/nav.css" />
+    <link rel="stylesheet" href="css/skills.css" />
+    <link rel="stylesheet" href="css/footer.css" />
 
     <!-- Font Roboto -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -27,108 +27,90 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-</head>
-<body>
-  <!-- --------------HEADER--------------------- -->
-  <header>
-    <!-- NAV -->
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="portfolio.html">Portfolio</a></li>
-        <li><a href="skills.html">Skills</a></li>
-        <li><a href="contact.html">Contacts</a></li>
-      </ul>
-    </nav>
-  </header>
+  </head>
+  <body>
+    <!-- --------------HEADER--------------------- -->
+    <header>
+      <!-- NAV -->
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a href="skills.html">Skills</a></li>
+          <li><a href="contact.html">Contacts</a></li>
+        </ul>
+      </nav>
+    </header>
 
-  <main>
-    <h1>Skills</h1>
-    <!-- ================GRID-CONTAINER============== -->
-    <div class="grid-skills-container">
-      <div class="grid-item"><h2>Full Stack Web Developer</h2></div>
-      <div class="grid-item"></div>
-      <div class="grid-item"></div>
-      <div class="grid-item"></div>
-      <div class="grid-item"></div>
-      <div class="grid-item"><h3>Other Skills</h3></div>
-      <div class="grid-item"><h3>Programming Languages</h3></div>
-      <div class="grid-item"><h3>Other Languages</h3></div>
-      <div class="grid-item"><h3>Frameworks</h3></div>
-      <div class="grid-item"><h4>Bo<span>o</span>tstr<span>a</span>p</h4></div>
-      <div class="grid-item"><h4><span>J</span>ava<span>S</span>cript</h4></div>
-      <div class="grid-item"><h4><span>H</span>TML / <span>C</span>SS</h4></div>
-      <div class="grid-item"><h4>G<span>i</span>t</h4></div>
-      <div class="grid-item"><h4>S<span>A</span>SS / S<span>C</span>SS</h4></div>
-      <div class="grid-item"><h4>R<span>e</span>act</h4></div>
-      <div class="grid-item"><h4>Fi<span>g</span>ma</h4></div>
-      <div class="grid-item"></div>
-      <div class="grid-item">
-        <h3>Databases</h3>
+    <main>
+      <h1>Skills</h1>
+      <!-- ================GRID-CONTAINER============== -->
+      <div class="grid-skills-container">
+        <div class="grid-item"><h2>Full Stack Web Developer</h2></div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item"><h3>Other Skills</h3></div>
+        <div class="grid-item"><h3>Programming Languages</h3></div>
+        <div class="grid-item"><h3>Other Languages</h3></div>
+        <div class="grid-item"><h3>Frameworks</h3></div>
+        <div class="grid-item"><h4>Bo<span>o</span>tstr<span>a<span>p</h4></div>
+        <div class="grid-item"><h4><span>J</span>ava<span>S</span>cript</h4></div>
+        <div class="grid-item"><h4><span>H</span>TML / <span>C</span>SS</h4></div>
+        <div class="grid-item"><h4>G<span>i</span>t</h4></div>
+        <div class="grid-item"><h4>S<span>A</span>SS / S<span>C</span>SS</h4></div>
+        <div class="grid-item"><h4>R<span>e</span>act</h4></div>
+        <div class="grid-item"><h4>Fi<span>g</span>ma</h4></div>
+        <div class="grid-item"></div>
+        <div class="grid-item"><h3>Databases</h3></div>
+        <div class="grid-item"><h4>B<span>A</span>SH</h4></div>
+        <div class="grid-item"><h4>N<span>o</span>ode.js / Exp<span>r</span>ess.js</h4></div>
+        <div class="grid-item"><h4>Mong<span>oo</span>se</h4></div>
+        <div class="grid-item"><h4>L<span>i</span>nux</h4></div>
+        <div class="grid-item"><h4>Mon<span>g</span>oDB</h4></div>
+
+        <div class="bg-item"></div>
       </div>
-      <div class="grid-item">
-        <h4>B<span>A</span>SH</h4>
+    </main>
+
+ 
+
+    <!-- -----------------FOOTER------------------- -->
+    <footer>
+      <div class="footer-container">
+        <ul>
+          <li>copyright</li>
+
+          <li>
+            <ul class="social-media-links">
+              <li>
+                <a
+                  href="https://www.instagram.com/timurbeerleen/?hl=de"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                ></a>
+              </li>
+              <li>
+                <a
+                  href="https://www.linkedin.com/in/timur-kokumbaev-3391b7249/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                ></a>
+              </li>
+              <li>
+                <a
+                  href="https://github.com/TimurKbv"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                ></a>
+              </li>
+            </ul>
+          </li>
+
+          <li>all rights reserved</li>
+        </ul>
       </div>
-      <div class="grid-item">
-        <h4>N<span>o</span>ode.js / Exp<span>r</span>ess.js</h4>
-      </div>
-      <div class="grid-item">
-        <h4>Mong<span>oo</span>se</h4>
-      </div>
-      <div class="grid-item">
-        <h4>L<span>i</span>nux</h4>
-      </div>
-      <div class="grid-item">
-        <h4>Mon<span>g</span>oDB</h4>
-      </div>
-      
-      <div class="bg-item"></div>
-    </div>
-  </main>
-
-  <section>
-
-
-  </section>
-    
-  <!-- -----------------FOOTER------------------- -->
-  <footer>
-    <div class="footer-container">
-      <ul>
-
-        <li>copyright</li>
-
-        <li>
-          <ul class="social-media-links">
-            <li>
-              <a
-                href="https://www.instagram.com/timurbeerleen/?hl=de"
-                target="_blank"
-                rel="noopener noreferrer"
-              ></a>
-            </li>
-            <li>
-              <a
-                href="https://www.linkedin.com/in/timur-kokumbaev-3391b7249/"
-                target="_blank"
-                rel="noopener noreferrer"
-              ></a>
-            </li>
-            <li>
-              <a
-                href="https://github.com/TimurKbv"
-                target="_blank"
-                rel="noopener noreferrer"
-              ></a>
-            </li>
-          </ul>
-        </li>
-
-        <li>all rights reserved</li>
-
-      </ul>
-    </div>
-</footer>
-
-</body>
+    </footer>
+  </body>
 </html>
