Kleine JS geschrieben, dass der nav auf Home verschwindet

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
       <!-- ----------NAV--------- -->
       <nav>
         <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
-          <li><a href="skills.html">Skills</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li class="nav-link-1"><a href="#">Home</a></li>
+          <li class="nav-link-2"><a href="portfolio.html">Portfolio</a></li>
+          <li class="nav-link-3"><a href="skills.html">Skills</a></li>
+          <li class="nav-link-4"><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
       <!-- ------------HEADER CONTAINER ----------------->
@@ -230,5 +230,7 @@
         </ul>
       </div>
   </footer>
+
+  <script src="/js/script.js"></script>
   </body>
 </html>
