--- a/portfolio.html
+++ b/portfolio.html
@@ -100,6 +100,7 @@
             <p>View</p>
           </div>
 
+          <!-- BG Container -->
           <div class="bg-container"></div>
         </a>
 
@@ -254,6 +255,6 @@
       </ul>
     </div>
 </footer>
-    
+    <script src="/js/portfolio.js"></script>
 </body>
 </html>
