Style name geändert auf home

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Portfolio Project" />
     <title>Portfolio</title>
     <link rel="stylesheet" href="css/nav.css" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/home.css" />
     <link rel="stylesheet" href="css/footer.css">
 
     <!-- Font Roboto -->
@@ -34,10 +34,10 @@
       <!-- ----------NAV--------- -->
       <nav>
         <ul>
-          <li class="nav-link-1"><a href="#">Home</a></li>
-          <li class="nav-link-2"><a href="portfolio.html">Portfolio</a></li>
-          <li class="nav-link-3"><a href="skills.html">Skills</a></li>
-          <li class="nav-link-4"><a href="contact.html">Contact</a></li>
+          <li class="nav-link-1"><a href="#">H<span>o</span>me</a></li>
+          <li class="nav-link-2"><a href="portfolio.html">Port<span>f</span>olio</a></li>
+          <li class="nav-link-3"><a href="skills.html">Sk<span>i</span>lls</a></li>
+          <li class="nav-link-4"><a href="contact.html">Cont<span>a</span>ct</a></li>
         </ul>
       </nav>
       <!-- ------------HEADER CONTAINER ----------------->
@@ -107,6 +107,44 @@
             </div>
           </a>
         </div>
+      </div>
+          <!-- -----------------BURGER MENU------------------ -->
+
+
+      <div class="menu-btn">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>    
+
+      <div class="burger-menu">
+        <a href="#main">
+          <div class="header-menu-1">
+            <h3>H<span>o</span>me</h3>
+            <p>Some words about me.</p>
+          </div>
+        </a>
+
+        <a href="portfolio.html">
+          <div class="header-menu-2">
+            <h3>Port<span>f</span>olio</h3>
+            <p>My last works.</p>
+          </div>
+        </a>
+
+        <a href="skills.html">
+          <div class="header-menu-3">
+            <h3>S<span>k</span>ills</h3>
+            <p>Something about my skills.</p>
+          </div>
+        </a>
+
+        <a href="contact.html">
+          <div class="header-menu-4">
+            <h3>Co<span>n</span>tact</h3>
+            <p>Send me a message.</p>
+          </div>
+        </a>
       </div>
     </header>
           <!-- --------------MAIN----------------- -->
@@ -231,6 +269,7 @@
       </div>
   </footer>
 
-  <script src="/js/script.js"></script>
+  <script src="js/script.js"></script>
+  <script src="js/nav.js"></script>
   </body>
 </html>
