--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
   <header>
     <nav>
       <ul>
-        <li><a href="index.html">Home</a></li>
+        <li><a href="home.html">Home</a></li>
         <li><a href="portfolio.html">Portfolio</a></li>
         <li><a href="skills.html">Skills</a></li>
         <li><a href="contact.html">Contacts</a></li>
