--- a/home.html
+++ b/home.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Portfolio Project" />
     <title>Portfolio</title>
     <link rel="stylesheet" href="css/nav.css" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/home.css" />
     <link rel="stylesheet" href="css/footer.css">
 
     <!-- Font Roboto -->
