--- a/contact.html
+++ b/contact.html
@@ -39,6 +39,44 @@
         <li><a href="contact.html">Contacts</a></li>
       </ul>
     </nav>
+
+    <!-- BURGER MENU -->
+    <div class="burger-menu">
+
+      <a href="home.html">
+        <div class="header-menu-1">
+          <h3>H<span>o</span>me</h3>
+          <p>Some words about me.</p>
+        </div>
+      </a>
+
+      <a href="portfolio.html">
+        <div class="header-menu-2">
+          <h3>Port<span>f</span>olio</h3>
+          <p>My last works.</p>
+        </div>
+      </a>
+
+      <a href="skills.html">
+        <div class="header-menu-3">
+          <h3>S<span>k</span>ills</h3>
+          <p>Something about my skills.</p>
+        </div>
+      </a>
+
+      <a href="contact.html">
+        <div class="header-menu-4">
+          <h3>Co<span>n</span>tact</h3>
+          <p>Send me a message.</p>
+        </div>
+      </a>
+    </div>
+
+    <div class="menu-btn">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
   </header>
 
   <!-- MAIN -->
@@ -132,5 +170,6 @@
     </div>
 </footer>
     
+<script src="js/nav.js"></script>
 </body>
 </html>
